--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skillswap",
-  "main": "expo-router/entry",
+  "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -15,14 +15,13 @@
     "@react-navigation/bottom-tabs": "^7.8.6",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.21",
-    "@react-navigation/native-stack": "^7.7.0",
+    "@react-navigation/native-stack": "^7.8.0",
     "expo": "~54.0.25",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.9",
-    "expo-router": "~6.0.15",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
